objects/BMCServiceDesk__BMC_StorageExtent__c.object
<CustomObject>
    <description>BMC_StorageExtent. CMDB Specifies a contiguous range of logical blocks on a storage media, which supports storing and retrieving data, for example, an external hard disk</description>
    <fields>
        <fullName>BMCServiceDesk__Available_Capacity__c</fullName>
        <label>Available Capacity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Connection_Type__c</fullName>
        <label>Connection Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_Of_Blocks__c</fullName>
        <label>Number Of Blocks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Storage Extent</label>
    <nameField>
        <label>Storage Extent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage Extents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>